working on responsiveness.

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
                 <div class="container-fluid" id = "nav-lower">
 
                     <div class = "nav-lower-text">
+                        <!-- <p class="navbar-text"> -->
                         <a href="/entries">view existing entries</a> | 
                         <a href="/addEntryForm">create a new entry</a> | 
                         <a href="/board_quiver">view/ edit quiver</a> |
@@ -49,6 +50,7 @@
                                 {% endfor %}
                             {% endif %}
                         {% endwith %}
+                        <!-- </p> -->
                     </div> <!--  closes nav lower text -->
 
                 </div> <!--  closes nav lower container fluid -->
