--- a/templates/surf_entry_add.html
+++ b/templates/surf_entry_add.html
@@ -19,165 +19,184 @@
 
 <div class="content-container">
 
-<form action="/addEntryToDB" method="post">
+	<form action="/addEntryToDB" method="post">
 
-	<div class="row"> <!-- top row -->
+		<div class="row"> <!-- top row: instructions -->
+	        <span class="title-center">
+				<h2>Enter info about your surf session</h2>
+				<h4>(only fields marked with * are required)</h4>
+			</span>
+		</div> <!-- closes top row -->
 
-        <span class="title-center">
-			<h2>Enter info about your surf session:</h2>
-			<!-- implement start and end time again later. for now, datetime NOW -->
-			<!-- Date:<br>
-			<input type="date" name = "entry_date">
-			<br>
-			Start Time (as HH:MM with "AM" or "PM"):<br>
-			<input type="time" name="start_time">
-			<br>
-			End Time (as HH:MM with "AM" or "PM"):<br>
-			<input type="time" name="end_time"> -->
-			<!--  -->
-			<!--  -->
-		</span>
-
-	</div> <!-- closes top row -->
-
-	<!-- form -->
-	<div class="row"> <!-- main row -->
-
-		<div class="col-md-6 col-xs-12"> <!-- left col -->
-
-			<br>
-			<!-- location info -->
-			<br>
-			<h4>Beach Name:</h4>
-			<h5>(if your spot isn't on the list, pick the nearest beach)</h5>
-
-			<select name = "loc_id">
-				{% for county in counties %}
-					<optgroup label="{{county[0]}}">
-						{% for loc in locations %}
-							{% if loc.county == county[0] %}
-							<option value="{{loc.id}}">{{loc.beach_name}}</option>
-							{% endif %}
-						{% endfor %}	
-					</optgroup>	
-				{% endfor %}
-			</select>
-
-			<h4>Spot Name:</h4>
-			<input type="text" class="form-control" name = "spot_name" maxlength="64" size="64" placeholder="(more specific descriptor, eg: patch, Sloat, north end...)">
-
-			<h5>Did you go out?</h5>
-			<input type="radio" name = "go_out" required value = "Y"> Yes!
-			<input type="radio" name = "go_out" value = "N"> No (Select no if you just checked the conditions)
-
-			<h5>Did you go out with a buddy?</h5>
-			<input type="text" class="form-control" name = "buddy_name" maxlength="64" size="64" placeholder="(if so put their name(s) here)">
-
-			<!-- board info -->
-			<h5>Board Ridden:</h5>
-			<select name = "board_id">
-				{% for category in categories %}
-					<optgroup label="{{category[0]}}">
-						{% for board in boards %}
-							{% if board.category == category[0] %}
-							<option value="{{board.id}}">{{board.nickname}}</option>
-							{% endif %}
-						{% endfor %}
-					</optgroup>	
-				{% endfor %}
-			</select>
-
-			<a href="/board_quiver" class="btn btn-xs btn-default" target="_blank">add a board to quiver</a> 
-			<br>
-
-			<h5>Did you wish you'd brought a different board?:</h5>
-			<input type="radio" name = "board_pref" required value = "smaller">(smaller)
-			<input type="radio" name = "board_pref" value = "ok">(just right)
-			<input type="radio" name = "board_pref" value = "bigger">(bigger)
-			<h5>Any notes on your board choice?</h5>
-			<input type="text" class="form-control" name = "board_notes" maxlength="64" size="64" placeholder="(optional notes about how this board worked for you this session)">
-			<br>
-			<br>
-		</div> <!-- closes left col -->
+        <div class="row"> <!-- spacer row -->
+        </div> <!-- closes spacer row -->
 
 
-		<div class="col-md-6 col-xs-12"> <!-- right col -->
+		<div class="row"> <!-- main row: all the forms -->
 
-			<div class="row" id="entry-form-rating-overall"> <!-- right-top row -->
+			<div class="col-md-6 col-xs-12"> <!-- left col: when/ where/ with whom/ what board -->
 
-				<h4>Please rate how much you enjoyed the session overall:</h4>
-				(or how good it looked, if you didn't go out)
+				<!-- implement start and end time again later. for now, datetime NOW -->
+				<!-- Date:<br>
+				<input type="date" name = "entry_date">
 				<br>
-				(should've gone for a bike ride)
-				<input type="radio" name = "rate_overall_fun" required value = "1">
-				<input type="radio" name = "rate_overall_fun" value = "2">
-				<input type="radio" name = "rate_overall_fun" value = "3">
-				<input type="radio" name = "rate_overall_fun" value = "4">
-				<input type="radio" name = "rate_overall_fun" value = "5">(made my day!)
+				Start Time (as HH:MM with "AM" or "PM"):<br>
+				<input type="time" name="start_time">
+				<br>
+				End Time (as HH:MM with "AM" or "PM"):<br>
+				<input type="time" name="end_time"> -->
 
-			</div> <!-- closes right-top row -->
+				<!-- location info -->
+				<div class="input-group">
+					<h4>Beach Name*</h4>
+					<h5>(if your spot isn't on the list, pick the nearest beach)</h5>
 
-			<div class="row" id="entry-form-ratings-specific"> <!-- right-bot row -->
+					<select name = "loc_id">
+						{% for county in counties %}
+							<optgroup label="{{county[0]}}">
+								{% for loc in locations %}
+									{% if loc.county == county[0] %}
+									<option value="{{loc.id}}">{{loc.beach_name}}</option>
+									{% endif %}
+								{% endfor %}	
+							</optgroup>	
+						{% endfor %}
+					</select>
+				</div> <!-- closes input group -->
 
-				<h4>These specific ratings below are optional,<br>
-					but the more you answer, the more we can show you later:</h4>
+				<div class="input-group">
+					<h4>Spot Name</h4>
+					<input type="text" class="form-control" name = "spot_name" maxlength="64" size="64" placeholder="(more specific descriptor, eg: patch, Sloat, north end...)">
 
-				<h5>How crowded was it?:</h5>
-				(just me and the marine mammals)
-				<input type="radio" name = "rate_crowd_den" value = "1">
-				<input type="radio" name = "rate_crowd_den" value = "2">
-				<input type="radio" name = "rate_crowd_den" value = "3">
-				<input type="radio" name = "rate_crowd_den" value = "4">
-				<input type="radio" name = "rate_crowd_den" value = "5">(human obstacle course)
+					<h5>Did you go out?</h5>
+					<input type="radio" name = "go_out" required value = "Y"> Yes!
+					<input type="radio" name = "go_out" value = "N"> No (Select no if you just checked the conditions)
 
-				<h5>How was the crowd's vibe?:</h5>
-				(grrr)
-				<input type="radio" name = "rate_crowd_vibe" value = "1">
-				<input type="radio" name = "rate_crowd_vibe" value = "2">
-				<input type="radio" name = "rate_crowd_vibe" value = "3">
-				<input type="radio" name = "rate_crowd_vibe" value = "4">
-				<input type="radio" name = "rate_crowd_vibe" value = "5">(yeah!)
+					<h5>Did you go out with a buddy?</h5>
+					<input type="text" class="form-control" name = "buddy_name" maxlength="64" size="64" placeholder="(if so put their name(s) here)">
+				</div> <!-- closes input group -->
 
-				<h5>How challenging were the waves for you?:</h5>
-				(easy)
-				<input type="radio" name = "rate_wave_challenge" value = "1">
-				<input type="radio" name = "rate_wave_challenge" value = "2">
-				<input type="radio" name = "rate_wave_challenge" value = "3">
-				<input type="radio" name = "rate_wave_challenge" value = "4">
-				<input type="radio" name = "rate_wave_challenge" value = "5">(intense!)
+				<!-- board info -->
+				<div class="input-group">
+					<h5>Board Ridden*</h5>
+					<select name = "board_id">
+						{% for category in categories %}
+							<optgroup label="{{category[0]}}">
+								{% for board in boards %}
+									{% if board.category == category[0] %}
+									<option value="{{board.id}}">{{board.nickname}}</option>
+									{% endif %}
+								{% endfor %}
+							</optgroup>	
+						{% endfor %}
+					</select>
+					<a href="/board_quiver" class="btn btn-xs btn-default" target="_blank">add a board to quiver</a> 
+				</div> <!-- closes input group -->
 
-				<h5>How FUN were the waves for you?:</h5>
-				(meh)
-				<input type="radio" name = "rate_wave_fun" value = "1">
-				<input type="radio" name = "rate_wave_fun" value = "2">
-				<input type="radio" name = "rate_wave_fun" value = "3">
-				<input type="radio" name = "rate_wave_fun" value = "4">
-				<input type="radio" name = "rate_wave_fun" value = "5">(epic!)
-		
-			</div> <!-- closes right-bot row -->
+				<br>
+				<div class="input-group">
+					<h5>Did you wish you'd brought a different board?*</h5>
+					<input type="radio" name = "board_pref" required value = "smaller"> (smaller)
+					<input type="radio" name = "board_pref" value = "ok"> (just right)
+					<input type="radio" name = "board_pref" value = "bigger"> (bigger)
+					<h5>Any notes on your board choice?</h5>
+					<input type="text" class="form-control" name = "board_notes" maxlength="64" size="64" placeholder="(optional notes about how this board worked for you this session)">
+				</div> <!-- closes input group -->
+				<br>
+				<br>
+			</div> <!-- closes left col -->
 
-		</div> <!-- closes right col -->
-	</div> <!-- closes main row -->
 
-	<div class="row"> <!-- bot row -->
+			<div class="col-md-6 col-xs-12"> <!-- right col -->
 
-        <span class="title-center">
-        	<div class="row">
-			<h3>Other notes about your overall experience:</h3>
-			</div>
-			<div class="row" id = "entry-notes-input">
-			<input type="text" class="form-control" name = "gen_notes"  maxlength="140" size="140" placeholder = "(keep it tweet-sized: 140 char limit)">
-			<!-- TODO: make this input bigger, and specify char limit -->
-			</div>
-			<div class="row" id = "entry-form-submit">
-			<input type="submit" value = "Add Entry to the Journal">
-			<h3> (this entry will automatically use today's date and the current time)</h3>
-			</div>
-        </span>
+				<div class="row" id="entry-form-rating-overall"> <!-- right-top row -->
 
-	</div> <!-- closes bot row -->
+					<div class="input-group">
+						<h4>Please rate how much you enjoyed the session overall*</h4>
+						(or how good it looked, if you didn't go out)
+						<br>
+						(should've gone for a bike ride)
+						<input type="radio" name = "rate_overall_fun" required value = "1">
+						<input type="radio" name = "rate_overall_fun" value = "2">
+						<input type="radio" name = "rate_overall_fun" value = "3">
+						<input type="radio" name = "rate_overall_fun" value = "4">
+						<input type="radio" name = "rate_overall_fun" value = "5"> (made my day!)
+					</div> <!-- closes input group -->
 
-</form>
+				</div> <!-- closes right-top row -->
+
+				<div class="row" id="entry-form-ratings-specific"> <!-- right-bot row -->
+
+					<h4>These specific ratings below are optional,<br>
+						but the more you answer, the more we can show you later:</h4>
+						
+					<div class="input-group">
+						<h5>How crowded was it?</h5>
+						(just me and the marine mammals)
+						<input type="radio" name = "rate_crowd_den" value = "1">
+						<input type="radio" name = "rate_crowd_den" value = "2">
+						<input type="radio" name = "rate_crowd_den" value = "3">
+						<input type="radio" name = "rate_crowd_den" value = "4">
+						<input type="radio" name = "rate_crowd_den" value = "5"> (human obstacle course)
+					</div> <!-- closes input group -->
+
+					<div class="input-group">
+						<h5>How was the crowd's vibe?</h5>
+						(grrr)
+						<input type="radio" name = "rate_crowd_vibe" value = "1">
+						<input type="radio" name = "rate_crowd_vibe" value = "2">
+						<input type="radio" name = "rate_crowd_vibe" value = "3">
+						<input type="radio" name = "rate_crowd_vibe" value = "4">
+						<input type="radio" name = "rate_crowd_vibe" value = "5"> (yeah!)
+					</div> <!-- closes input group -->
+
+					<div class="input-group">
+						<h5>How challenging were the waves for you?</h5>
+						(easy)
+						<input type="radio" name = "rate_wave_challenge" value = "1">
+						<input type="radio" name = "rate_wave_challenge" value = "2">
+						<input type="radio" name = "rate_wave_challenge" value = "3">
+						<input type="radio" name = "rate_wave_challenge" value = "4">
+						<input type="radio" name = "rate_wave_challenge" value = "5"> (intense!)
+					</div> <!-- closes input group -->
+
+					<div class="input-group">
+						<h5>How FUN were the waves for you?</h5>
+						(meh)
+						<input type="radio" name = "rate_wave_fun" value = "1">
+						<input type="radio" name = "rate_wave_fun" value = "2">
+						<input type="radio" name = "rate_wave_fun" value = "3">
+						<input type="radio" name = "rate_wave_fun" value = "4">
+						<input type="radio" name = "rate_wave_fun" value = "5"> (epic!)
+					</div> <!-- closes input group -->
+
+				</div> <!-- closes right-bot row -->
+
+			</div> <!-- closes right col -->
+		</div> <!-- closes main row -->
+
+		<div class="row"> <!-- bot row -->
+
+	        <span class="title-center">
+	        	<div class="input-group">
+		        	<div class="row">
+						<h3>Other notes about your overall experience:</h3>
+						</div>
+						<div class="row" id = "entry-notes-input">
+						<input type="text" class="form-control" name = "gen_notes"  maxlength="140" size="140" placeholder = "(keep it tweet-sized: 140 char limit)">
+					</div> <!-- closes row -->
+				</div> <!-- closes input group -->
+	        	<div class="input-group">
+					<div class="row" id = "entry-form-submit">
+					<input type="submit" value = "Add Entry to the Journal">
+					<h3> (this entry will automatically use today's date and the current time)</h3>
+					</div>
+				</div> <!-- closes input group -->
+	        </span>
+
+		</div> <!-- closes bot row -->
+
+	</form>
 </div> <!-- closes content container -->
 
 
